Added english translation

--- a/index.html
+++ b/index.html
@@ -53,21 +53,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-                <section data-markdown="content/presentation.md" data-separator="^\n---\n$" data-separator-vertical="^\n--\n$"></section>
-                
-                <section>
-                    <h1>Obrigado!</h1>
-                    <h3>Dúvidas?</h3>
-                    
-                    <br />
-                    <br />
-                    <br />
-                    <div>
-                        <a href="ebonet.me">blog</a> |
-                        <a href="github.com/ebonet"> github </a> | 
-                        <a href="linkedin.com/in/eduardobonet/en"> linkedin </a>
-                    </div>
-                </section>
+                <section data-markdown="content/presentation.en.md" data-separator="^\n---\n$" data-separator-vertical="^\n--\n$"></section>
             </div>
 		</div>
 
@@ -78,6 +64,8 @@
 			// More info https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
 				history: true,
+                width: 1200,
+                height: 900,
 
 				// More info https://github.com/hakimel/reveal.js#dependencies
 				dependencies: [
